# databrics-mcp-server

./: .env.example  .gitignore  .mcp.env.example  .mcp.json  ENHANCEMENTS.md  FINAL_STEPS.md  GITHUB_PUBLISHING_GUIDE.md  MANIFEST.in  PUBLISHING.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_original.md  START_HERE.md  TROUBLESHOOTING.md  pyproject.toml  test_server.sh
.bmad-ephemeral/: story-mcp-server-fix-1.md  story-mcp-server-fix-2.md  story-mcp-server-fix-3.md
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/_cfg/ides/: claude-code.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.claude/commands/: README.md  review-comprehensive.md  review-quick.md  review-security.md
.cursor/commands/: README.md  execute-prp.md  generate-prp.md
.github/workflows/: claude.yml  publish.yml  security-review.yml
databricks_mcp/: __main__.py  main.py
databricks_mcp/api/: clusters.py  dbfs.py  genie.py  jobs.py  libraries.py  notebooks.py  repos.py  sql.py  unity_catalog.py  unity_catalog_enhanced.py
databricks_mcp/cli/: commands.py
databricks_mcp/core/: auth.py  config.py  formatting.py  models.py  sql_safety.py  utils.py
databricks_mcp/server/: __init__.py  __main__.py  app.py  databricks_mcp_server.py
docs/: CURSOR_SETUP.md  DEPLOYMENT_SUMMARY.md  api-contracts.md  bmm-workflow-status.yaml  epics.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md  sprint-status 2.yaml  sprint-status.yaml  tech-spec.md
examples/: direct_usage.py
scripts/: run_list_tools.ps1  run_list_tools.sh  run_mcp_client_test.sh  run_tests.sh  setup.ps1  setup.sh  setup_codespaces.sh  show_clusters.py  show_notebooks.py  start_mcp_server.ps1  start_mcp_server.sh  sync_repo_and_run.py  test_setup_local.sh
tests/: test_additional_features.py  test_clusters.py  test_direct.py  test_jobs.py  test_parameter_unwrapping.py  test_tools.py
